поправил работу с базами данных